Fix z-index issue

--- a/styles/highlights.css
+++ b/styles/highlights.css
@@ -155,7 +155,7 @@
   }
 
   .highlights-article-opal aside span {
-    z-index: 10;
+    z-index: 1;
   }
 
   .highlights-article-cookie-killer,
